mockup-webapp/css/custom.css
html, body {
  font-family: "Oxygen", sans-serif;
  height: 100%;
  width: 100%;
}

main {
    display: none;
}

/*NAVBAR*/

#dropdown-help {
    margin-top: 64px;
}

nav {
    background-color: #fff;
}

nav .brand-logo {
    color: rgba(244, 67, 54, 0.5);
    font-weight: bold;
    margin-left: 50px;
}

nav ul a {
    color: rgba(0, 0, 0, 0.5);
}

nav ul a:hover {
    color: #fff;
}

nav ul li {
    width: 110px;
    text-align: center;
}

nav ul li {
    border-left: 1px solid rgba(0, 0, 0, 0.1);
}
nav ul li:hover {
    background-color: rgba(244, 67, 54, 0.5);
}


i.right {
    margin: 0px;
}

.profile {
    margin-left: 10px;
}

#navbar-searchbar {
    width: 400px;
}

#navbar-searchbar:hover {
    background-color: #ddd;
}

input#search {
    display: inline-block;
    height: 64px;
    line-height: 64px;
}

nav .input-field {
    height: 64px;
    line-height: 64px;
}
/*show the stupid navbar search*/
nav .input-field label i { 
    color: rgba(0, 0, 0, 0.2);
}

.input-field input[type=search]:focus+label i {
    color: rgba(244, 67, 54, 0.5);
}

.input-field input[type=search]:focus ~ .material-icons {
    color: rgba(244, 67, 54, 0.5);
}


/*Launch page*/
.slider {
    z-index: 1;
    height: 550px !important;
}

.slides {
    height: 550px !important;
}

.slider h3 {
    text-shadow: 0px 1px 10px #000;
}

.slider h5 {
    text-shadow: 0px 5px 10px #000;
}

.profile-dropdown-icon {
    padding-left: -100px;
}

.grey-box {
    background-color: rgba(0, 0, 0, 0.3);
    text-align: center;
}


/*custom login popup*/
#login-popup {
    z-index: 2;
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7);
}

#login-popup-inner {
    margin: 0 auto;
    margin-top: 10%;
    width: 450px;
    height: 70%;
    min-height: 550px;
    background-color: #fff;
    text-align: center;
    padding: 30px 30px 30px 30px;
}

.login-popup-inner-items {
    width: 100%;
    margin-bottom: 5px;
    height: 60px;
    line-height: 60px;
    background-color: rgba(0, 0, 255, 0.6);
    text-transform: none;
}

.login-popup-inner-items:hover {
    background-color: rgba(0, 0, 255, 0.9);
}

.crossline-wrapper {
    margin-top:20px;
    border-top: 1px solid #969696;
    /* width: 80px; */
    margin-left: auto;
    margin-right: auto;
}

.crossline-wrapper > div {
    margin-top: -15px;
    background: #fff;
    width: 30px;
    line-height: 25px;
    color: #969696;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.login-popup-inner-items {
    background-color: rgba(244, 67, 54, 0.8);
    color: #fff;
}

.login-popup-inner-items:hover {
    background-color: rgba(244, 67, 54, 0.6);
}

#fb-login-button {
    background-color: #4568b2;
    color: #fff;
}

#fb-login-button:hover {
    background-color: #5679c3;
}

#google-login-button {
    background-color: #fff;
    color: rgba(0, 0, 0, 0.5);
    border: 1px solid rgba(0, 0 ,0, 0.3);
    margin-bottom: 15px;
}

#google-login-button:hover {
    border: 1px solid rgba(0, 0, 0, 1);
}

.login-fields .row .col {
    text-align: left;
    padding: 0;
    border: 1px solid rgba(0, 0, 0, 0.3);
}

.login-fields .row .col:hover {
    border: 1px solid rgba(0, 0, 0, 0.7);
}

input[type=email], input[type=password] {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    box-sizing: border-box;
    border: none;
}

input[type=email]:focus:not([readonly]), input[type=password]:focus:not([readonly]) {
    border: none;
    box-shadow: none;
}

